alignment of status icon fixed

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -333,8 +333,9 @@ textarea:focus {
 .status {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  flex-grow: 1;
+  align-items: end;
   margin-right: 15px;
 }
 
